# services/platform/src/shaidago/api/v1/__init__.py
@@ -2,7 +2,7 @@
 
 from fastapi import APIRouter
 
-from shaidago.api.v1 import auth, projects, report_status, reports
+from shaidago.api.v1 import auth, projects, report_status, reporter_handles, reports
 
 router = APIRouter(prefix="/v1")
 router.include_router(auth.router)
@@ -10,3 +10,4 @@ router.include_router(projects.localities_router)
 router.include_router(projects.router)
 router.include_router(reports.router)
 router.include_router(report_status.router)
+router.include_router(reporter_handles.router)
